[gd_scene load_steps=5 format=3 uid="uid://ctwffyyou880p"]

[ext_resource type="Texture2D" uid="uid://dcf02n0egc2x1" path="res://images/slider_well.png" id="1_7wwkj"]
[ext_resource type="Script" uid="uid://omhm5sqma11c" path="res://slider.gd" id="1_yiagy"]
[ext_resource type="Texture2D" uid="uid://6dh1yanlh1yq" path="res://images/slider_knob.png" id="2_yiagy"]

[sub_resource type="CircleShape2D" id="CircleShape2D_yiagy"]
radius = 15.0333

[node name="Slider" type="Node2D"]
script = ExtResource("1_yiagy")

[node name="SliderWell" type="Sprite2D" parent="."]
scale = Vector2(0.333, 0.333)
texture = ExtResource("1_7wwkj")

[node name="MaxMarker" type="Marker2D" parent="."]
position = Vector2(0, -69)

[node name="MinMarker" type="Marker2D" parent="."]
position = Vector2(0, 70)

[node name="Knob" type="Area2D" parent="."]

[node name="SliderKnob" type="Sprite2D" parent="Knob"]
texture = ExtResource("2_yiagy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Knob"]
shape = SubResource("CircleShape2D_yiagy")

[node name="Looker" type="Marker2D" parent="Knob"]

[connection signal="input_event" from="Knob" to="." method="_on_knob_input_event"]
